# serverless-event-notifier

./: Cargo.toml  Dockerfile  README.md
src/: commands.txt  lib.rs  main.rs
