[package]
name = "pi-test"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
lambda_http = "0.11.3"
lambda_runtime = "0.11.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
aws-config = "1"
aws-sdk-sns = "1"

